--- a/back/package.json
+++ b/back/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
-    "nanoid": "^3.1.29",
-    "node": "^16.10.0"
+    "nanoid": "^3.1.30"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
